--- a/react/jwt-demo/package.json
+++ b/react/jwt-demo/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "vite-plugin-mock": "^3.0.2"
