--- a/react/jwt-demo/package.json
+++ b/react/jwt-demo/package.json
@@ -14,7 +14,9 @@
     "jsonwebtoken": "^9.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "vite-plugin-mock": "^3.0.2"
+    "react-router-dom": "^7.7.0",
+    "vite-plugin-mock": "^3.0.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
