搜索组件及性能优化

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "openai": "^4.71.1"
+    "axios": "^1.11.0",
+    "openai": "^4.71.1",
+    "react-router-dom": "^7.7.1",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "typescript": "^5.8.3"
