react hooks 自定义和内置

--- a/vue/hooks/react-version/package.json
+++ b/vue/hooks/react-version/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ahooks": "^3.9.0",
+    "hooks": "^0.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
