--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "axios": "^1.11.0",
+    "echarts": "^6.0.0",
     "openai": "^4.104.0",
     "react-router-dom": "^7.7.1",
     "zustand": "^5.0.6"
