--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "echarts": "^6.0.0",
+    "opai": "^0.0.2",
     "openai": "^4.104.0",
     "react-router-dom": "^7.7.1",
     "zustand": "^5.0.6"
