--- a/react/package.json
+++ b/react/package.json
@@ -11,5 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.14.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.4",
+    "@babel/preset-react": "^7.27.1",
+    "babel-loader": "^10.0.0"
   }
 }
