--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
 	"dependencies": {
 		"antd": "^5.27.4"
+	},
+	"devDependencies": {
+		"@babel/cli": "^7.28.3",
+		"@babel/core": "^7.28.4",
+		"@babel/preset-env": "^7.28.3",
+		"core-js": "3"
 	}
 }
